https://issues.apache.org/jira/browse/EXTSCRIPT-129 changing the group ids to the final official ones (we broke our scheme of naming with the old one)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@940793 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-core-root/extscript-core/pom.xml
+++ b/extscript-core-root/extscript-core/pom.xml
@@ -9,11 +9,11 @@
     <name>MyFaces Extension Scripting Core</name>
 
     <description>
-        Core of the MyFaces Extension-scripting
+        Core of the MyFaces extensions.scripting
     </description>
 
     <parent>
-        <groupId>org.apache.myfaces.extension-scripting</groupId>
+        <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
