--- a/extscript-bundles/extscript-myfaces12-bundle/pom.xml
+++ b/extscript-bundles/extscript-myfaces12-bundle/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.myfaces.extension-scripting</groupId>
+    <groupId>org.apache.myfaces.extensions.scripting</groupId>
     <artifactId>extscript-myfaces12-bundle</artifactId>
     <packaging>jar</packaging>
     <name>MyFaces Extension Scripting MyFaces 1.2 convenience meta bundle</name>
@@ -14,7 +14,7 @@
     </description>
 
     <parent>
-        <groupId>org.apache.myfaces.extension-scripting</groupId>
+        <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-bundles</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -27,17 +27,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core-java6</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-myfaces12-extensions</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -61,9 +61,9 @@
                 <configuration>
                     <artifactSet>
                         <includes>
-                            <artifact>org.apache.myfaces.extension-scripting:extscript-core</artifact>
-                            <artifact>org.apache.myfaces.extension-scripting:extscript-core-java6</artifact>
-                            <artifact>org.apache.myfaces.extension-scripting:extscript-myfaces12-extensions</artifact>
+                            <artifact>org.apache.myfaces.extensions.scripting:extscript-core</artifact>
+                            <artifact>org.apache.myfaces.extensions.scripting:extscript-core-java6</artifact>
+                            <artifact>org.apache.myfaces.extensions.scripting:extscript-myfaces12-extensions</artifact>
                         </includes>
                     </artifactSet>
                 </configuration>
