--- a/extscript-bundles/extscript20-assembly/pom.xml
+++ b/extscript-bundles/extscript20-assembly/pom.xml
@@ -9,7 +9,7 @@
     </description>
 
     <parent>
-        <groupId>org.apache.myfaces.extension-scripting</groupId>
+        <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-bundles</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -35,20 +35,20 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.apache.myfaces.extension-scripting</groupId>
+                                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
                                     <artifactId>extscript-core</artifactId>
                                     <version>${version}</version>
                                     <classifier>javadoc</classifier>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>org.apache.myfaces.extension-scripting</groupId>
+                                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
                                     <artifactId>extscript-core-java6</artifactId>
                                     <version>${version}</version>
                                     <classifier>javadoc</classifier>
                                 </artifactItem>
 
                                 <artifactItem>
-                                    <groupId>org.apache.myfaces.extension-scripting</groupId>
+                                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
                                     <artifactId>extscript-myfaces12-extensions</artifactId>
                                     <version>${version}</version>
                                     <classifier>javadoc</classifier>
@@ -68,20 +68,20 @@
                             <artifactItems>
 
                                 <artifactItem>
-                                    <groupId>org.apache.myfaces.extension-scripting</groupId>
+                                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
                                     <artifactId>extscript-core</artifactId>
                                     <version>${version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
                                 <artifactItem>
-                                    <groupId>org.apache.myfaces.extension-scripting</groupId>
+                                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
                                     <artifactId>extscript-core-java6</artifactId>
                                     <version>${version}</version>
                                     <classifier>sources</classifier>
                                 </artifactItem>
 
                                 <artifactItem>
-                                    <groupId>org.apache.myfaces.extension-scripting</groupId>
+                                    <groupId>org.apache.myfaces.extensions.scripting</groupId>
                                     <artifactId>extscript-myfaces12-extensions</artifactId>
                                     <version>${version}</version>
                                     <classifier>sources</classifier>
@@ -138,19 +138,19 @@
 
 
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core-java6</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-myfaces2-extensions</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
