--- a/extscript-bundles/pom.xml
+++ b/extscript-bundles/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.myfaces.extension-scripting</groupId>
+    <groupId>org.apache.myfaces.extensions.scripting</groupId>
     <artifactId>extscript-bundles</artifactId>
     <packaging>pom</packaging>
     <name>MyFaces Extension Scripting meta bundles</name>
@@ -15,7 +15,7 @@
     </description>
 
     <parent>
-        <groupId>org.apache.myfaces.extension-scripting</groupId>
+        <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
