--- a/extscript-core-root/extscript-myfaces12-extensions/pom.xml
+++ b/extscript-core-root/extscript-myfaces12-extensions/pom.xml
@@ -7,11 +7,11 @@
     <name>myfaces12-extensions</name>
 
     <description>
-        extension-scripting classes which enable myfaces 1.2 compatibility
+        extensions.scripting classes which enable myfaces 1.2 compatibility
     </description>
 
     <parent>
-        <groupId>org.apache.myfaces.extension-scripting</groupId>
+        <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -26,7 +26,7 @@
 
 
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
