--- a/extscript-core-root/extscript-myfaces2-extensions/pom.xml
+++ b/extscript-core-root/extscript-myfaces2-extensions/pom.xml
@@ -7,24 +7,30 @@
     <name>myfaces2-extensions</name>
 
     <description>
-        extension-scripting classes which enable myfaces 2.0 compatibility
+        extensions.scripting classes which enable myfaces 2.0 compatibility
     </description>
 
     <parent>
-        <groupId>org.apache.myfaces.extension-scripting</groupId>
+        <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-myfaces2-extensions</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-myfaces2-extensions</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-myfaces2-extensions</url>
+        <connection>
+            scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-myfaces2-extensions
+        </connection>
+        <developerConnection>
+            scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-myfaces2-extensions
+        </developerConnection>
+        <url>
+            http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-core-root/extscript-myfaces2-extensions
+        </url>
     </scm>
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -54,6 +60,12 @@
             <version>1.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.validator.validation-modules</groupId>
+            <artifactId>myfaces-extval-bean-validation</artifactId>
+            <version>${extval.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
@@ -71,43 +83,47 @@
 
     <profiles>
         <profile>
-        <!--
-          - Build and install into the repository some additional artifacts that we don't
-          - want to build during normal development because they take too long.
-          -->
-        <id>generate-assembly</id>
-        <activation>
-          <property>
-            <name>performRelease</name>
-            <value>true</value>
-          </property>
-        </activation>
-        <build>
-          <plugins>
-            <plugin>
-              <!-- Install in the repository a "-javadoc.jar" file -->
-              <artifactId>maven-javadoc-plugin</artifactId>
-              <version>2.4</version>
-              <executions>
-                <execution>
-                  <id>attach-javadoc</id>
-                  <goals><goal>jar</goal></goals>
-                </execution>
-              </executions>
-            </plugin>
-            <plugin>
-              <!-- Install in the repository a "-sources.jar" file -->
-              <artifactId>maven-source-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>attach-source</id>
-                  <goals><goal>jar</goal></goals>
-                </execution>
-              </executions>
-            </plugin>
-          </plugins>
-        </build>
-      </profile>
+            <!--
+            - Build and install into the repository some additional artifacts that we don't
+            - want to build during normal development because they take too long.
+            -->
+            <id>generate-assembly</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- Install in the repository a "-javadoc.jar" file -->
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.4</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadoc</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <!-- Install in the repository a "-sources.jar" file -->
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-source</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
 </project>
