--- a/extscript-examples/myfaces20-example/pom.xml
+++ b/extscript-examples/myfaces20-example/pom.xml
@@ -3,11 +3,11 @@
 
     <parent>
         <artifactId>extscript-examples</artifactId>
-        <groupId>org.apache.myfaces.extension-scripting</groupId>
+        <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.myfaces.extension-scripting</groupId>
+    <groupId>org.apache.myfaces.extensions.scripting</groupId>
     <artifactId>myfaces20-example</artifactId>
     <packaging>war</packaging>
     <name>A custom project using myfaces 2.0</name>
@@ -66,7 +66,7 @@
              ext-scripting core+java6 support + myfaces 2 support
          -->
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-myfaces20-bundle</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
