--- a/extscript-examples/pom.xml
+++ b/extscript-examples/pom.xml
@@ -13,7 +13,7 @@
     </description>
 
     <parent>
-        <groupId>org.apache.myfaces.extension-scripting</groupId>
+        <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
