https://issues.apache.org/jira/browse/EXTSCRIPT-130
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@941343 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -206,7 +206,12 @@
                 <artifactId>taglist-maven-plugin</artifactId>
 
                 <configuration>
-                    <tags>TODO, FIXME, XXX, @deprecated</tags>
+                    <tags>
+                        <tag>TODO</tag>
+                        <tag>FIXME</tag>
+                        <tag>XXX</tag>
+                        <tag>@deprecated</tag>
+                    </tags>
                 </configuration>
             </plugin>
 
