--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <id>maven2-repository.dev.java.net</id>
             <name>Java.net Repository for Maven</name>
             <url>http://download.java.net/maven/2/</url>
+             <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
             <layout>default</layout>
         </repository>
         <repository>
@@ -65,6 +71,7 @@
             <id>apache-maven-snapshots</id>
             <url>http://people.apache.org/repo/m2-snapshot-repository</url>
         </repository>
+      
     </repositories>
 
     <dependencies>
