--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
     <artifactId>extscript-root</artifactId>
     <packaging>pom</packaging>
     <name>Myfaces Extension Scripting Project</name>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
 
 
     <properties>
         <myfaces12.version>1.2.8</myfaces12.version>
-        <myfaces2.version>2.0.2-SNAPSHOT</myfaces2.version>
+        <myfaces2.version>2.0.1</myfaces2.version>
         <groovy.version>1.7.1</groovy.version>
         <extval.version>2.0.4-SNAPSHOT</extval.version>
     </properties>
