--- a/extscript-bundles/pom.xml
+++ b/extscript-bundles/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>extscript-bundles</artifactId>
     <packaging>pom</packaging>
     <name>MyFaces Extension Scripting meta bundles</name>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <description>
         Meta bundles bundling the various ext-script
@@ -15,13 +15,13 @@
     <parent>
         <groupId>org.apache.myfaces.extensions.scripting</groupId>
         <artifactId>extscript-root</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0/extscript-bundles</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/tags/extscript-root-1.0/extscript-bundles</developerConnection>
-        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/tags/extscript-root-1.0/extscript-bundles</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/extscript-bundles</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/extscript-bundles</url>
     </scm>
 
     <modules>
