--- a/extscript-bundles/extscript-myfaces20-bundle/pom.xml
+++ b/extscript-bundles/extscript-myfaces20-bundle/pom.xml
@@ -48,6 +48,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>1.3.1</version>
+                <!--
+                    todo use the shade plugin
+                    to rename references from
+                    util.shared_impl into impl
+                -->
                 <executions>
                     <execution>
                         <phase>package</phase>
