remove unused junk
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1300526 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/myfaces20-example/pom.xml
+++ b/extscript-examples/myfaces20-example/pom.xml
@@ -71,11 +71,18 @@
              meta bundle, which includes the entire
              ext-scripting core+java6 support + myfaces 2 support
          -->
+        <!--
         <dependency>
             <groupId>org.apache.myfaces.extensions.scripting</groupId>
             <artifactId>extscript-myfaces20-bundle</artifactId>
             <version>1.0.3-SNAPSHOT</version>
         </dependency>
+        -->
+       <dependency>
+           <groupId>org.apache.myfaces.extensions.scripting</groupId>
+           <artifactId>extscript-core</artifactId>
+           <version>1.0.3-SNAPSHOT</version>
+       </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
