EXTSCRIPT-159: Add scala language support if possible: adding the classpath to avoid a scala compiler error, thanks to the scala mailinglist this was fast to fix
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1302905 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,20 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.scala-lang</groupId>
+                        <artifactId>scala-library</artifactId>
+                        <version>${scala-library.version}</version>
+                    </dependency>
+
+
+                    <dependency>
+                        <groupId>org.scala-lang</groupId>
+                        <artifactId>scala-compiler</artifactId>
+                        <version>${scala-library.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
