--- a/extscript-core-root/pom.xml
+++ b/extscript-core-root/pom.xml
@@ -23,6 +23,7 @@
 
     <modules>
         <module>extscript-core</module>
+        <module>extscript-cdi</module>
         <!--
         <module>extscript-myfaces12-extensions</module>
         <module>extscript-myfaces2-extensions</module>
