OWB now working in the example
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1309352 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-examples/cdi-example/src/main/webapp/WEB-INF/web.xml
+++ b/extscript-examples/cdi-example/src/main/webapp/WEB-INF/web.xml
@@ -130,6 +130,10 @@
     Note, this servlet filter is vital without it Ext-Scripting will not work,
     if you do not set it you will get an appropriate warning in the command line
     -->
+    <listener>
+        <listener-class>org.apache.webbeans.servlet.WebBeansConfigurationListener</listener-class>
+    </listener>
+
 
     <!-- Listener, to allow Jetty serving MyFaces apps -->
     <listener>
