--- a/extscript-examples/cdi-example/pom.xml
+++ b/extscript-examples/cdi-example/pom.xml
@@ -124,18 +124,33 @@
         </dependency>
 
         <dependency>
-           <groupId>org.apache.geronimo.specs</groupId>
-           <artifactId>geronimo-jcdi_1.0_spec</artifactId>
-           <version>1.0</version>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-jcdi_1.0_spec</artifactId>
+            <version>1.0</version>
 
-       </dependency>
+        </dependency>
 
-       <!-- javax.inject jsr 330 -->
-       <dependency>
-           <groupId>org.apache.geronimo.specs</groupId>
-           <artifactId>geronimo-atinject_1.0_spec</artifactId>
-           <version>1.0</version>
-       </dependency>
+        <!-- javax.inject jsr 330 -->
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-atinject_1.0_spec</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-interceptor_1.1_spec</artifactId>
+            <version>1.0</version>
+            <!--scope>runtime</scope -->
+        </dependency>
+
+        <!-- apache compatible jta spec replacement jar -->
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-jta_1.1_spec</artifactId>
+            <version>1.1.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
