https://issues.apache.org/jira/browse/EXTSCRIPT-164
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1340912 13f79535-47bb-0310-9956-ffa450edef68

--- a/extscript-core-root/extscript-core/src/test/resources/webapp/WEB-INF/web.xml
+++ b/extscript-core-root/extscript-core/src/test/resources/webapp/WEB-INF/web.xml
@@ -66,7 +66,7 @@
             source dir
         </description>
         <param-name>facelets.RESOURCE_RESOLVER</param-name>
-        <param-value>org.apache.myfaces.extensions.scripting.facelet.ReroutingResourceResolver</param-value>
+        <param-value>org.apache.myfaces.extensions.scripting.jsf.facelet.MyFacesReroutingResourceResolver</param-value>
     </context-param>
     
     <!--
