--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
 
     <description>
-        MyFaces Extension Scripting, scripting support and dynamic recompilation
+        MyFaces Extension Scripting: scripting support and dynamic recompilation
         for JSF
     </description>
 
