adding rat.txt for bug in rat plugin
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@1369853 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,7 @@
                             <exclude>**/LICENSE.TXT</exclude>
                             <exclude>**/NOTICE.TXT</exclude>
                             <exclude>.gitignore</exclude>
+			    <exclude>**/target/rat.txt</exclude>
                             <exclude>atlassian-ide-plugin.xml</exclude>
                         </excludes>
                     </configuration>
